# scheduling-milp-uat

./: ._.idea  .gitignore  BD.md  CLAUDE.md  README.md  pyproject.toml
analysis/: generate_tables.py
data/: loader.py
data/anonymized/: modelo_base.db
docs/: structure.md
model/: __init__.py  builder.py  update_data.py  utils.py
monitor/: dashboard.py
runners/: benchmark.py  full_experiment.py  sensitivity.py  smoke_test.py
scripts/: init_db.py  run_experiments.sh
solvers/: __init__.py  _base.py  cbc.py  glpk.py  gurobi.py  highs.py
tablas/: e1_resultados.tex  e2_benchmark.tex  e3_sensibilidad.tex
