[tool.poetry]
name = "scheduling-milp-uat"
version = "0.1.0"
description = "Experimental code and data for: Design of a Schedule Assignment Model for an Educational Program — Implementation with Pyomo"
authors = ["AlejandroG9"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python     = "^3.11"
pyomo      = "^6.9"
gurobipy   = "^12.0"
pandas     = "^2.2"
openpyxl   = "^3.1"
psutil     = "^6.0"
highspy    = "^1.7"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
